apps/authentik/networkpolicies/authentik-server.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-server
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: authentik-postgresql
            namespace: authentik
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: authentik-redis-master
            namespace: authentik
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
