apps/authentik/networkpolicies/authentik-worker.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"  # kube-api
              protocol: TCP
    - toFQDNs:
        - matchName: ${SMTP_DOMAIN}
      toPorts:
        - ports:
            - port: "465"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: authentik-postgresql
            namespace: authentik
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: authentik-redis-master
            namespace: authentik
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: minio
            namespace: minio
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
