apps/authentik/networkpolicies/postgres.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-postgres
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: postgresql
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: server
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/name: authentik
            io.kubernetes.pod.namespace: authentik
        - matchLabels:
            app.kubernetes.io/component: worker
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/name: authentik
            io.kubernetes.pod.namespace: authentik
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
