apps/authentik/networkpolicies/traefik-egress-authentik.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-authentik
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sService:
            serviceName: ak-outpost-authentik-embedded-outpost
            namespace: authentik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
